--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -4,6 +4,8 @@
   --dp-danger: red;
   --dp-dark: #1a1a1a;
   --dp-white: #ffffff;
+  --dp-accent: #f9a84d;
+  --dp-accent2: #da6317;
   --dp-secondary: #eee;
   --dp-light: #f4f4ee;
 }
